# f2c

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  README.md  autogen.sh  configure.ac
cmake/: config.h.in
cmake/Modules/: FindFseeko.cmake  FindLFS.cmake
config_aux/: config.h.in
doc/: Makefile.am  f2c.1  f2c.bib  f2c.tex
include/: Makefile.am  f2c.h  f2c.h.in  f2c_inline.h  f2c_types.h  f2c_types.h.in  f2c_types_win.h
lib/: Makefile.am  abort_.c  arith.h  arithchk.c  backspac.c  c_abs.c  c_cos.c  c_div.c  c_exp.c  c_log.c  c_sin.c  c_sqrt.c  cabs.c  close.c  d_abs.c  d_acos.c  d_asin.c  d_atan.c  d_atn2.c  d_cnjg.c  d_cos.c  d_cosh.c  d_dim.c  d_exp.c  d_imag.c  d_int.c  d_lg10.c  d_log.c  d_mod.c  d_nint.c  d_prod.c  d_sign.c  d_sin.c  d_sinh.c  d_sqrt.c  d_tan.c  d_tanh.c  derf_.c  derfc_.c  dfe.c  (+127 more)
m4/: f2c.m4
scripts/: Makefile.am  f77.in
src/: Makefile.am  cds.c  data.c  defines.h  defs.h  equiv.c  exec.c  expr.c  format.c  formatdata.c  ftypes.h  gram.c  init.c  intr.c  io.c  lex.c  main.c  mem.c  misc.c  names.c  niceprintf.c  output.c  p1output.c  parse_args.c  pread.c  proc.c  put.c  putpcc.c  sysdep.c  sysdep.h  vax.c  version.c
